* Found and fixed serious performance penalties that could be issued
  by dspu::Limiter on small input buffers.
* Added dspu::InSampleStream class for working with audio sample in streaming manner.
* Added dspu::Sample::load_ext and dspu::Sample::loads_ext methods for loading sample
  as a part of LSPC file when possible.
* Added SCS_AMIN and SCS_AMAX functions for the sidechain input mode.

=== 1.0.6 ===
* Fixed clang errors.

=== 1.0.5 ===
* Updated build scripts.

=== 1.0.4 ===
* Fixed unintialized values in several modules.
* Added Sample::stretch() method for stretching samples.
* Updated dspu::Gate module, now it allows to properly use the reverse gate option.
* Improved mathematics in dspu::Compressor module, added support of limited compression gain.
* Updated build scripts.

=== 1.0.3 ===
* Fixed memory leak in dspu::LatencyDetector module.
* Fixed operation on uninitialized values for dspu::Depopper module.
* Added support of modern C++ 11 standard and above.
* Updated dependencies.
* Updated build scripts.

=== 1.0.2 ===
* Fixed typo in Wavefront Object File Format name.
* Added dspu::semitones_to_frequency_shift function that allows to compute relative
  frequency multiplier for relative musical pitch shift.
* Added set_channels() method to the Sample class for easy resizing purpose.
* Fixed uninitialized variable usage in the dspu::Crossover module.
* Many bugfixes and updates related to colored noise generation.
* Updated build scripts.

=== 1.0.1 ===
* Fixed bugs in construct()/destroy() method pairs for several DSP modules.
* Added denial of copy constructors for all DSP units.
* Updated build scripts.

=== 1.0.0 ===
* Added MLS noise generator.
* Added LCG Noise generator
* Added Velvet Noise generator.
* Added Spectral Tilt arbitrary color filter.
* Added High order Butterworth filter for inaudible noise.
* Added Noise Generator class for arbitrary noise generation.

=== 0.5.4 ===
* Added dspu::Sample::normalize method for sample normalization.